Fix object margins

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </div>
                 <div class="column-2 column-2-mobile flex flex-end">
                     <form action="https://rebellionwebdesign.github.io/fab-forever/response.html"
-                        class="form-wrapper flex flex-column box-shadow flex-center">
+                        class="form-wrapper flex flex-column box-shadow flex-center-x-mobile">
                         <h3>Lets stay in contact!</h3>
                         <label for="fname">Your first name <span class="red-star">*</span></label>
                         <input type="text" id="fname" name="fname" aria-label="Put your first name in here" required>
@@ -157,7 +157,7 @@
                     </form>
                 </div>
             </div>
-            <img class="flip-x divider" src="assets/img/svg/shape-divider-bottom.svg"
+            <img class="flip-x divider divider-bottom" src="assets/img/svg/shape-divider-bottom.svg"
                 alt="the bottom shape divider">
         </section>
         <!--CONTACT SECTION END-->
